Update and rename cost.ev to cost.env

--- a/config/cost.env
+++ b/config/cost.env
@@ -1,7 +1,8 @@
 MAIN_LOG_LEVEL=INFO
 SERVICE_LOG_LEVEL=DEBUG
 COMMONS_LOG_LEVEL=DEBUG
-
+ANALYST_HOST=
+CAT_HOST=
 MYSQL_ENDPOINT=jdbc:mysql://cost-qa.ccrgriurmcju.ap-south-1.rds.amazonaws.com:3306/cost_orchestrator
 MYSQL_USER=cost_rw
 MYSQL_DATABASE=cost_orchestrator
